--- a/README
+++ b/README
@@ -1,9 +1,15 @@
-## My Personal Porfolio Site - August 5th, 2022
+## My Personal Porfolio Site
 
-Website for my own portfolio.
+Website for my own portfolio. It's on display at: cbarnett427.github.io
 
 ## Created using
 
 - HTML
 - CSS
 - JavaScript
+
+
+## Acknowledgments
+
+* [Google Fonts](https://fonts.google.com/) - Fonts used
+* [Font Awesome](https://fontawesome.com/?from=io/) - Icons used
