--- a/README
+++ b/README
@@ -1,15 +1,15 @@
-## My Personal Porfolio Site
+## My Current Developer Porfolio
+Website for my personal portfolio. It's on display at: https://cbarnett427.github.io/
 
-Website for my own portfolio. It's on display at: cbarnett427.github.io
 
 ## Created using
-
 - HTML
 - CSS
 - JavaScript
 
 
 ## Acknowledgments
-
 * [Google Fonts](https://fonts.google.com/) - Fonts used
 * [Font Awesome](https://fontawesome.com/?from=io/) - Icons used
+* [Box Icons](https://boxicons.com/) - Icons used
+* [Dev Icons](https://devicon.dev/) - Icons used
