--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-## My Current Developer Porfolio
+## My Personal Porfolio Site
 
-Website for my personal portfolio. It's on display at: https://cbarnett427.github.io/
+Website for my own portfolio.
 
 ## Created using
 
@@ -13,5 +13,3 @@ Website for my personal portfolio. It's on display at: https://cbarnett427.githu
 
 * [Google Fonts](https://fonts.google.com/) - Fonts used
 * [Font Awesome](https://fontawesome.com/?from=io/) - Icons used
-* [Box Icons](https://boxicons.com/) - Icons used
-* [Dev Icons](https://devicon.dev/) - Icons used
