--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-## My Personal Porfolio Site
+## My Current Developer Porfolio
 
-Website for my own portfolio.
+Website for my personal portfolio. It's on display at: https://cbarnett427.github.io/
 
 ## Created using
 
@@ -13,3 +13,5 @@ Website for my own portfolio.
 
 * [Google Fonts](https://fonts.google.com/) - Fonts used
 * [Font Awesome](https://fontawesome.com/?from=io/) - Icons used
+* [Box Icons](https://boxicons.com/) - Icons used
+* [Dev Icons](https://devicon.dev/) - Icons used
